<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/book_image"
            android:layout_width="107dp"
            android:layout_height="169dp"
            android:contentDescription="@string/book_image"
            android:src="@drawable/sofia_sister"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="108dp"
            android:layout_marginTop="4dp"
            android:autoLink="all"
            android:maxHeight="52dp"
            android:paddingHorizontal="10dp"
            android:paddingStart="10dp"
            android:text="@string/book_title"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="#212121"
            app:layout_constraintLeft_toRightOf="@id/book_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="108dp"
            android:layout_marginTop="4dp"
            android:autoLink="all"
            android:paddingHorizontal="10dp"
            android:paddingStart="10dp"
            android:text="@string/book_author"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/textColorSecondary"
            app:layout_constraintLeft_toRightOf="@id/book_image"
            app:layout_constraintTop_toBottomOf="@+id/book_title" />

        <TextView
            android:id="@+id/book_state"
            android:layout_width="171dp"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            android:textAllCaps="true"
            android:textAlignment="viewEnd"
            android:paddingEnd="10dp"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="126dp" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>